Closed Bug 148787 Opened 23 years ago Closed 23 years ago

[HAVE FIX] Clicked links don't go red (prefs style sheet is overriding UA style sheet)

Categories

(Core :: CSS Parsing and Computation, defect, P2)

defect

Tracking

()

VERIFIED FIXED
mozilla1.1alpha

People

(Reporter: mpt, Assigned: dbaron)

Details

(Keywords: css-moz, css1, testcase, Whiteboard: [Hixie-P0])

Attachments

(1 file, 1 obsolete file)

Build: 2002060108, Mac OS 9.2 To reproduce: 1. Mouse down on a text link on any page which does not specify its own :active style. What should happen: * The link gets a focus border. * The link text goes red. What actually happens: * the link gets a focus border. * Nothing else. This is despite the existence of the following lines in html.css: *|*:-moz-any-link:active { color: red; } Since clicking links is a fairly common activity, this is a major user experience problem.
Attached file testcase
Attached patch Patch 1.0 (obsolete) — Splinter Review
Status: NEW → ASSIGNED
Keywords: css-moz, css1, patch, testcase
OS: Mac System 9.x → All
Priority: -- → P2
Hardware: Macintosh → All
Summary: Clicked links don't go red (prefs style sheet is overriding UA style sheet) → [HAVE FIX] Clicked links don't go red (prefs style sheet is overriding UA style sheet)
Whiteboard: [Hixie-P0]
Target Milestone: --- → mozilla1.1alpha
Comment on attachment 86057 [details] [diff] [review] Patch 1.0 Change of plan. The fix we want for this is to remove the entire section of the user prefs sheet, change the colours in html.css to be the system colours, and hook up these new system colours to prefs. http://www.w3.org/TR/css3-color/#css3-user ActiveHyperlink, ActiveHyperlinkText, HoverHyperlink, HoverHyperlinkText, Hyperlink, HyperlinkText, VisitedHyperlink, VisitedHyperlinkText
Attachment #86057 - Attachment is obsolete: true
Attachment #86057 - Flags: needs-work+
Comment on attachment 86057 [details] [diff] [review] Patch 1.0 r=dbaron, if you want to check this in.
Attachment #86057 - Flags: review+
Filed bug 149056 on implementing what Hixie described in comment 4.
patch checked in, marking fixed.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
v
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: