bug 148787 patch by hixie r=dbaron sr=roc+moz Clicked links don't go red (prefs style sheet is overriding UA style sheet)